--- a/value_of_information_webapp/static/css/project.css
+++ b/value_of_information_webapp/static/css/project.css
@@ -1,5 +1,3 @@
-/* These styles are generated from project.scss. */
-
 .alert-debug {
   color: black;
   background-color: white;
@@ -10,4 +8,8 @@
   color: #b94a48;
   background-color: #f2dede;
   border-color: #eed3d7;
+}
+
+code {
+  white-space: pre-line;
 }
