--- a/value_of_information_webapp/templates/pages/home.html
+++ b/value_of_information_webapp/templates/pages/home.html
@@ -3,7 +3,10 @@
 {% load tz %}
 
 {% block content %}
-    Calculate the expected value of receiving a signal.
+
+    <p class="mt-2">
+        Calculate the expected value of receiving a signal.
+    </p>
 
     {% if task_id %}
         <div class="card mb-2" id="statusContainer">
