--- a/value_of_information_webapp/templates/pages/home.html
+++ b/value_of_information_webapp/templates/pages/home.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
+{% load widget_tweaks %}
 {% load tz %}
 
 {% block content %}
@@ -25,7 +26,27 @@
 
 
     <form method="post" style="max-width: 35em">
-        {% crispy form %}
+        {% csrf_token %}
+        {% for field in form %}
+            {% if field.name == 'force_explicit' %}
+                <div class="row">
+                    <div class="col">
+                        {{ field|add_label_class:"form-check-label" }}
+                    </div>
+                    <div class="col" >
+                        {{ field|add_class:"checkboxinput form-check-input" }}
+                    </div>
+                </div>
+            {% else %}
+                {{ field|as_crispy_field }}
+            {% endif %}
+        {% endfor %}
+
+        <div class="mt-3 row">
+            <div class="col"></div>
+            <div class="col">
+                <input type="submit" name="submit" value="Submit" class="btn btn-primary" id="submit-id-submit"></div>
+        </div>
     </form>
 
 
