--- a/value_of_information_webapp/templates/pages/home.html
+++ b/value_of_information_webapp/templates/pages/home.html
@@ -42,11 +42,12 @@
             {% endif %}
         {% endfor %}
 
-        <div class="mt-3 row">
+        <div class="mt-3 mb-3 row">
             <div class="col"></div>
             <div class="col">
                 <input type="submit" name="submit" value="Submit" class="btn btn-primary" id="submit-id-submit"></div>
         </div>
+        {{ form|as_crispy_errors:"bootstrap" }}
     </form>
 
 
