improve print output in SimulationExecutor

--- a/value_of_information_webapp/static/css/project.css
+++ b/value_of_information_webapp/static/css/project.css
@@ -13,3 +13,9 @@
 code {
   white-space: pre-line;
 }
+
+@media (min-width: 75em) {
+  pre {
+      white-space: pre-wrap;       /* Since CSS 2.1 */
+  }
+}
