re-architect things a bit: 1. separate notions of query and task 2. submitting form gives user a /query/123 URL that is persistent (hence can be shared with others) 3. query equivalence classes can be enabled or disabled (disabled by default)

--- a/value_of_information_webapp/templates/pages/home.html
+++ b/value_of_information_webapp/templates/pages/home.html
@@ -25,7 +25,9 @@
 
 
 
-    <form method="post" style="max-width: 50em">
+    <form method="POST" action="{% url 'submit' %}"
+    style="max-width: 50em"
+    >
         {% csrf_token %}
         <div class="mb-5">
             <h5 class="card-title">Simulation parameters</h5>
@@ -85,7 +87,7 @@
         function check_on_background_task(id) {
             console.log('checking on task', id);
             $.ajax(
-                {url: '/get_result/' + id}
+                {url: "/task/" + id}
             ).done(function (data) {
                 if (data.completed) {
                     task_status = {
