--- a/value_of_information_webapp/templates/base.html
+++ b/value_of_information_webapp/templates/base.html
@@ -45,7 +45,7 @@
 
     </div>
 
-    <div class="container">
+    <div class="container-xl">
 
       {% if messages %}
         {% for message in messages %}
