--- a/value_of_information_webapp/templates/pages/home.html
+++ b/value_of_information_webapp/templates/pages/home.html
@@ -33,16 +33,28 @@
             <h5 class="card-title">Simulation parameters</h5>
             {% for field in simulation_form %}
                 {% if field.name == 'force_explicit' %}
-                    <div class="row">
-                        <div class="col">
+                    <div class="mt-3 mb-3 row">
+                        <div class="col-5">
                             {{ field|add_label_class:"form-check-label" }}
                         </div>
-                        <div class="col">
+                        <div class="col-2">
+                        </div>
+                        <div class="col-5">
                             {{ field|add_class:"checkboxinput form-check-input" }}
                         </div>
                     </div>
                 {% else %}
-                    {{ field|as_crispy_field }}
+                    <div class="mt-3 mb-3 row">
+                        <div class="col-5">
+                            {{ field|add_label_class:"col-form-label" }}
+                        </div>
+                        <div class="col-2">
+                            <pre class="col-form-label">{{ field.field.math_expr }}</pre>
+                        </div>
+                        <div class="col-5">
+                            {{ field|add_class:"form-control" }}
+                        </div>
+                    </div>
                 {% endif %}
             {% endfor %}
 
