--- a/value_of_information_webapp/templates/pages/home.html
+++ b/value_of_information_webapp/templates/pages/home.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-    <p class="mt-2">
+    <p class="mt-3">
         Calculate the expected value of receiving a signal.
     </p>
 
@@ -25,9 +25,7 @@
 
 
 
-    <form method="POST" action="{% url 'submit' %}"
-    style="max-width: 50em"
-    >
+    <form method="POST" action="{% url 'submit' %}">
         {% csrf_token %}
         <div class="mb-5">
             <h5 class="card-title">Simulation parameters</h5>
@@ -78,6 +76,7 @@
         </div>
     </form>
 
+    {% include "components/explainer.html" %}
 
     <script>
         let wait_ms = 100
