--- a/value_of_information_webapp/templates/pages/home.html
+++ b/value_of_information_webapp/templates/pages/home.html
@@ -44,7 +44,18 @@
                 {% else %}
                     <div class="mt-3 mb-3 row">
                         <div class="col-5">
-                            {{ field|add_label_class:"col-form-label" }}
+                            <div class="col-form-label">
+                                {% if field.field.explainer_text %}
+                                    <div class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#accordion_collapse_{{ field.auto_id }}">
+                                        {{ field.label }}
+                                    </div>
+                                {% else %}
+                                    {{ field.label }}
+                                {% endif %}
+                                <div id="accordion_collapse_{{ field.auto_id }}" class="accordion-collapse collapse card-body">
+                                    {{ field.field.explainer_text }}
+                                </div>
+                            </div>
                         </div>
                         <div class="col-2">
                             <pre class="col-form-label">{{ field.field.math_expr }}</pre>
