--- a/value_of_information_webapp/templates/account/password_reset_done.html
+++ b/value_of_information_webapp/templates/account/password_reset_done.html
@@ -9,8 +9,9 @@
     <h1>{% translate "Password Reset" %}</h1>
 
     {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
+        {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
 
-    <p>{% blocktranslate %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktranslate %}</p>
+    <p>{% blocktranslate %}We have sent you an e-mail. Please contact us if you do not receive it within a few
+        minutes.{% endblocktranslate %}</p>
 {% endblock %}
