--- a/value_of_information_webapp/templates/account/password_reset_from_key.html
+++ b/value_of_information_webapp/templates/account/password_reset_from_key.html
@@ -9,7 +9,8 @@
 
     {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktranslate %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktranslate %}</p>
+        <p>{% blocktranslate %}The password reset link was invalid, possibly because it has already been used.  Please
+            request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktranslate %}</p>
     {% else %}
         {% if form %}
             <form method="POST" action=".">
