--- a/value_of_information_webapp/templates/account/verification_sent.html
+++ b/value_of_information_webapp/templates/account/verification_sent.html
@@ -7,6 +7,7 @@
 {% block inner %}
     <h1>{% translate "Verify Your E-mail Address" %}</h1>
 
-    <p>{% blocktranslate %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktranslate %}</p>
+    <p>{% blocktranslate %}We have sent an e-mail to you for verification. Follow the link provided to finalize the
+        signup process. Please contact us if you do not receive it within a few minutes.{% endblocktranslate %}</p>
 
 {% endblock %}
