--- a/value_of_information_webapp/templates/components/explainer.html
+++ b/value_of_information_webapp/templates/components/explainer.html
@@ -1,15 +1,17 @@
 <div class="accordion mb-3 mt-3" id="explainer_accordion">
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="explainer_accordion_header">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#explainer_accordion_collapse" aria-expanded="false" aria-controls="explainer_accordion_collapse">
-        More information
-      </button>
-    </h2>
-    <div id="explainer_accordion_collapse" class="accordion-collapse collapse" aria-labelledby="explainer_accordion_header">
-      <div class="accordion-body">
-          {% include "components/explainer_text.html" %}
-      </div>
-    </div>
-  </div
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="explainer_accordion_header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#explainer_accordion_collapse" aria-expanded="false"
+                    aria-controls="explainer_accordion_collapse">
+                More information
+            </button>
+        </h2>
+        <div id="explainer_accordion_collapse" class="accordion-collapse collapse"
+             aria-labelledby="explainer_accordion_header">
+            <div class="accordion-body">
+                {% include "components/explainer_text.html" %}
+            </div>
+        </div>
+    </div
 </div>
