add feedback form

--- a/value_of_information_webapp/templates/pages/home.html
+++ b/value_of_information_webapp/templates/pages/home.html
@@ -95,6 +95,8 @@
 
     {% include "components/explainer.html" %}
 
+    {% include "components/feedback-form.html" %}
+
     <script>
         let wait_ms = 100
         const max_wait_ms = 3000
