--- a/value_of_information_webapp/templates/500.html
+++ b/value_of_information_webapp/templates/500.html
@@ -3,10 +3,13 @@
 {% block title %}Server Error{% endblock %}
 
 {% block content %}
-    <h1>Ooops!!! 500</h1>
+    <h1>500</h1>
 
-    <h3>Looks like something went wrong!</h3>
+    <h3>Whoops! Unexpected error.</h3>
 
-    <p>We track these errors automatically, but if the problem persists feel free to contact us. In the meantime, try
-        refreshing.</p>
+    <p>If the problem persists, you can let us know.</p>
+
+    <div class="mt-5">
+        {% include "components/feedback-form.html" %}
+    </div>
 {% endblock content %}
