refactor how page width is handled

--- a/value_of_information_webapp/static/css/project.css
+++ b/value_of_information_webapp/static/css/project.css
@@ -18,7 +18,7 @@
     white-space: normal;
 }
 
-.readable_width {
+#main_content_container > :not(#resultContainer, #statusContainer) {
     max-width: 50em;
 }
 
