--- a/value_of_information_webapp/templates/components/explainer.html
+++ b/value_of_information_webapp/templates/components/explainer.html
@@ -1,4 +1,4 @@
-<div class="accordion mb-3 mt-3 readable_width" id="explainer_accordion">
+<div class="accordion mb-3 mt-3" id="explainer_accordion">
     <div class="accordion-item">
         <h2 class="accordion-header" id="explainer_accordion_header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
