--- a/value_of_information_webapp/templates/components/feedback-form.html
+++ b/value_of_information_webapp/templates/components/feedback-form.html
@@ -1,4 +1,4 @@
-<div class="card mt-3 mb-3 readable_width">
+<div class="card mt-3 mb-3">
     <div class="card-body">
         <h5 class="card-title">Give feedback</h5>
         <form id="feedback-form" action="https://formspree.io/f/mrgjrbjb" method="POST">
