--- a/value_of_information_webapp/templates/base.html
+++ b/value_of_information_webapp/templates/base.html
@@ -49,7 +49,7 @@
 
 </div>
 
-<div class="container-xl">
+<div class="container-xl" id="main_content_container">
 
     {% if messages %}
         {% for message in messages %}
