--- a/value_of_information_webapp/templates/pages/home.html
+++ b/value_of_information_webapp/templates/pages/home.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-    <p class="mt-3 readable_width">
+    <p class="mt-3">
         Calculate the expected value of receiving a signal. This website provides a limited interface for
         <a href="https://github.com/tadamcz/value-of-information">this</a> Python package. For more flexibility,
         use the package directly.
@@ -32,7 +32,7 @@
 
 
 
-    <form method="POST" action="{% url 'submit' %}" class="readable_width">
+    <form method="POST" action="{% url 'submit' %}">
         {% csrf_token %}
         <div class="mb-5">
             <h5 class="card-title">Simulation parameters</h5>
