--- a/value_of_information_webapp/templates/base.html
+++ b/value_of_information_webapp/templates/base.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Calculate the expected value of receiving a signal">
     <meta name="author" content="Tom Adamczewski">
 
-    <link rel="icon" href="{% static 'images/favicons/favicon.ico' %}">
+    {% include "components/favicons.html" %}
 
     {% block css %}
         <!-- Latest compiled and minified Bootstrap CSS -->
