improve homepage wording

--- a/value_of_information_webapp/templates/pages/home.html
+++ b/value_of_information_webapp/templates/pages/home.html
@@ -7,7 +7,7 @@
 {% block content %}
 
     <p class="mt-3">
-        Calculate the expected value of receiving a signal. This website provides a limited interface for
+        Calculate the expected payoff from receiving a noisy signal. This website provides a limited interface for
         <a href="https://github.com/tadamcz/value-of-information">this</a> Python package. For more flexibility,
         use the package directly.
     </p>
