prevent spam with recaptcha

--- a/value_of_information_webapp/static/css/project.css
+++ b/value_of_information_webapp/static/css/project.css
@@ -42,3 +42,7 @@ form .accordion-button:not(.collapsed) {
     background-color: inherit;
     box-shadow: inherit;
 }
+
+.grecaptcha-badge {
+    visibility: hidden;
+}
