--- a/value_of_information_webapp/templates/components/feedback-form.html
+++ b/value_of_information_webapp/templates/components/feedback-form.html
@@ -6,46 +6,60 @@
             <textarea required class="form-control mb-3" name="message" placeholder="Feedback"></textarea>
             <button id="feedback-form-button" class="btn btn-secondary col">Submit</button>
             <span class="mx-1" id="feedback-form-status"></span>
+            <div class="mt-3">
+                This form is protected by reCAPTCHA and the Google
+                <a href="https://policies.google.com/privacy">Privacy Policy</a> and
+                <a href="https://policies.google.com/terms">Terms of Service</a> apply.
+            </div>
         </form>
     </div>
 </div>
 
+{% with recaptcha_site_key="6LelD7EhAAAAAH5hbZe766uhn7bdQCfCHdLXrMu_" %}
 
+<script src="https://www.google.com/recaptcha/api.js?render={{ recaptcha_site_key }}"></script>
 <script>
-    var form = document.getElementById("feedback-form");
-
-    const error_message = "There was a problem submitting your form. Try email instead: tadamczewskipublic@gmail.com"
-
-    async function handleSubmit(event) {
-
-
-        event.preventDefault();
+    $(document).ready(function () {
+        var form = document.getElementById("feedback-form");
         var status = document.getElementById("feedback-form-status");
-        status.innerHTML = "Sending...";
-        var data = new FormData(event.target);
-        fetch(event.target.action, {
-            method: form.method,
-            body: data,
-            headers: {
-                'Accept': 'application/json'
-            }
-        }).then(response => {
-            if (response.ok) {
-                status.innerHTML = "Thanks for your feedback!";
-                form.reset()
-            } else {
-                response.json().then(data => {
-                    if (Object.hasOwn(data, 'errors')) {
-                        status.innerHTML = data["errors"].map(error => error["message"]).join(", ")
-                    } else {
-                        status.innerHTML = error_message
-                    }
-                })
-            }
-        }).catch(error => {
-            status.innerHTML = error_message
-        });
-    }
+        const error_message = "There was a problem submitting your form. Try email instead: tadamczewskipublic@gmail.com"
+        form.addEventListener("submit", captcha)
 
-    form.addEventListener("submit", handleSubmit)
+        function captcha(event) {
+            event.preventDefault()
+            grecaptcha.ready(function () {
+                grecaptcha.execute("{{ recaptcha_site_key }}", {action: 'submit'}).then(function (token) {
+
+                    status.innerHTML = "Sending..."
+                    var data = new FormData(form);
+                    data.append("g-recaptcha-response", token)
+                    fetch(form.action, {
+                        method: form.method,
+                        body: data,
+                        headers: {
+                            'Accept': 'application/json'
+                        }
+                    }).then(response => {
+                        if (response.ok) {
+                            status.innerHTML = "Thanks for your submission!";
+                            form.reset()
+                        } else {
+                            response.json().then(data => {
+                                if (Object.hasOwn(data, 'errors')) {
+                                    status.innerHTML = data["errors"].map(error => error["message"]).join(", ")
+                                } else {
+                                    status.innerHTML = error_message
+                                }
+                            })
+                        }
+                    }).catch(error => {
+                        status.innerHTML = error_message
+                    });
+
+                })
+            })
+        }
+    })
 </script>
+
+{% endwith %}
