--- a/value_of_information_webapp/templates/pages/home.html
+++ b/value_of_information_webapp/templates/pages/home.html
@@ -56,6 +56,10 @@
                             {{ field|add_class:"checkboxinput form-check-input" }}
                         </div>
                     </div>
+                {% elif field.name == "metalog_prior_data" %}
+                    <div class="d-none">
+                        {{ field }}
+                    </div>
                 {% else %}
                     <div class="mt-3 mb-3 row">
                         <div class="col-5">
@@ -92,6 +96,12 @@
                     </div>
                 {% endif %}
             {% endfor %}
+            <div class="row family-metalog">
+                <h6>Metalog constructor</h6>
+                <div class="col" id="iframecontainer">
+
+                </div>
+            </div>
 
             {{ simulation_form|as_crispy_errors:"bootstrap" }}
         </div>
