remove link to unimportant repo

--- a/value_of_information_webapp/templates/components/footer.html
+++ b/value_of_information_webapp/templates/components/footer.html
@@ -1,6 +1,5 @@
 <p>
     This tool was developed by <a href="https://tadamcz.com/">Tom Adamczewski</a> under contract with
     <a href="https://www.openphilanthropy.org/">Open Philanthropy</a>. The source code for the value of information
-    package is <a href="https://github.com/tadamcz/value-of-information">here</a>, and the source code for this website
-    is <a href="https://github.com/tadamcz/value_of_information_webapp/">here</a>.
+    package is <a href="https://github.com/tadamcz/value-of-information">here</a>.
 </p>
