more explicit wording re units

--- a/value_of_information_webapp/templates/pages/home.html
+++ b/value_of_information_webapp/templates/pages/home.html
@@ -113,7 +113,7 @@
 
             <p>The parameters below have no effect on the numerical result,
                 but help make the results easier to interpret without errors.
-                <code>T</code> and <code>bar</code> must be expressed in <code>value_units</code> per
+                <code>T</code>, <code>sd_B</code>, and <code>bar</code> must be expressed in <code>value_units</code> per
                 <code>money_units</code> spent.
             </p>
 
